# cargo-timings

./: Cargo.toml  README.md  cargo-timing.html
src/: args.rs  config.rs  consts.rs  error.rs  formaters.rs  lib.rs  main.rs  parser.rs  sorting.rs  timings.rs  utils.rs
src/cli/: output.rs
src/ui/: app_state.rs  buffer_manager.rs  input_handler.rs  mod.rs  renderer.rs  widgets.rs
