[package]
name = "cargo-timings"
authors = ["Dominik Leszczynski <me@dominik-leszczynski.com>"]
description = "Catch slowest dependencies directly in your terminal"
license = "MIT"
repository = "https://github.com/Kayen0000/cargo-timings"
homepage = "https://github.com/Kayen0000/cargo-timings"
version = "0.2.1"
edition = "2024"

[package.metadata.funding]
github = "Kayen0000"

[package.metadata.docs.rs]
targets = []

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ratatui = { version = "0.30.2", optional = true }
crossterm = { version = "0.29.0", optional = true }
unicode-segmentation = { version = "1.13.3", optional = true }
anyhow = "1.0.102"
chrono = "0.4.45"
scraper = "0.27.0"

[features]
default = []
tui = ["dep:crossterm", "dep:ratatui", "dep:unicode-segmentation"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "cargo-timings"
path = "src/main.rs"


